--- a/requirements.txt
+++ b/requirements.txt
@@ -4,52 +4,18 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-aiosqlite==0.21.0
-    # via -r requirements.in
 annotated-types==0.7.0
     # via pydantic
-anyio==4.9.0
-    # via starlette
-click==8.2.1
-    # via uvicorn
-fastapi==0.115.14
-    # via -r requirements.in
-h11==0.16.0
-    # via uvicorn
-idna==3.10
-    # via anyio
 pydantic==2.11.7
-    # via
-    #   -r requirements.in
-    #   fastapi
-    #   pydantic-settings
+    # via -r requirements.in
 pydantic-core==2.33.2
     # via pydantic
-pydantic-settings==2.10.1
-    # via -r requirements.in
-python-dotenv==1.1.1
-    # via pydantic-settings
 pyyaml==6.0.2
     # via -r requirements.in
-redis==6.2.0
-    # via -r requirements.in
-sniffio==1.3.1
-    # via anyio
-starlette==0.46.2
-    # via fastapi
 typing-extensions==4.14.0
     # via
-    #   aiosqlite
-    #   anyio
-    #   fastapi
     #   pydantic
     #   pydantic-core
     #   typing-inspection
 typing-inspection==0.4.1
-    # via
-    #   pydantic
-    #   pydantic-settings
-uvicorn==0.35.0
-    # via -r requirements.in
-watchdog==6.0.0
-    # via -r requirements.in
+    # via pydantic
